# 0.0.23 (48572) Feb 2, 2011
Fixed: zoom was broken for last 2 modes
# 0.0.22 (48566) Feb 2, 2011
Made zoom controls smaller
Made the grid zoom in and out
Fixed the text on the zoom out button
# 0.0.21 (48561) Feb 2, 2011
Added zoom controls
# 0.0.20 (48357) Jan 31, 2011
Added "Options" menu with "Invert Colors" button, which inverts the colors in the play area but not the control panel
# 0.0.19 (48326) Jan 28, 2011
Made "Earth System" button always enabled
# 0.0.18 (48312) Jan 27, 2011
Tuned cartoon scaling to prevent more awkward nonlinear motion
Perform collisions only in real scale, i.e. only if the physical bodies collide, not if the cartoons collide.
# 0.0.17 (48239) Jan 25, 2011
Added a reset button underneath the simulation time readout
Made time speed slider work across modes
Start time speed slider at 25% instead of 50%
Lock in alpha values for cartoon mapping when gravity is disabled, this preserves linear motion
# 0.0.16 (48116) Jan 19, 2011
Fixed: stored 'rewind' values get reset during step and rewind
# 0.0.15 (48082) Jan 18, 2011
Update force vectors when gravity gets toggled on and off, otherwise displayed value won't update
If any of the rewind properties changes while the clock is paused, set a rewind point for all of them
simsharing: Save and restore window size
simsharing: Don't run physics on teacher machine, fixes stuttering
simsharing: Restore bodies after collision
Reset grid visibility on reset all
Reset measuring tape on reset all
simsharing: Save and restore measuring tape visibility and location
simsharing: Save and restore scale property
simsharing: Save and restore "show grid" property
simsharing: Save and restore selected mode
Modified the cartoon offset scales for Earth/Satellite mode so that inter-body distance remains the same in cartoon as in real scales
# 0.0.14 (47788) Jan 8, 2011
Fixed: dragging an object through a collision still leaves a path drawn, solved by stopping the path after collision