@@ -1,3 +1,5 @@
+Improved zoom buttons
+Zoom buttons become disabled when at max of range
 # 0.0.23 (48572) Feb 2, 2011
 Fixed: zoom was broken for last 2 modes
 # 0.0.22 (48566) Feb 2, 2011
